CAMEL-22288: camel-jbang: run/export to support using a directory as file name so you do not have to cd into the dir to do this